--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
                                                                         <li>
                                                                             <p> Savings Account </p>
                                                                         </li>
-                                                                        <li><a href="#"><i
+                                                                        <li><a href="banking_general.html"><i
                                                                                     class="fa fa-plus-circle"></i>
                                                                                 &nbsp; General</a> </li>
-                                                                        <li><a href="#"><i
+                                                                        <li><a href="banking_premium.html"><i
                                                                                     class="fa fa-plus-circle"></i>
                                                                                 &nbsp; Premium</a> </li>
-                                                                        <li><a href="#"><i
+                                                                        <li><a href="banking_kids.html"><i
                                                                                     class="fa fa-plus-circle"></i>
                                                                                 &nbsp; Kids</a> </li>
-                                                                        <li><a href="#"><i
+                                                                        <li><a href="banking_senior_citizen.html"><i
                                                                                     class="fa fa-plus-circle"></i>
                                                                                 &nbsp; Senior Citizens</a> </li>
                                                                     </ul>
@@ -167,7 +167,7 @@
                                                                         <li>
                                                                             <p> Fixed Diposit </p>
                                                                         </li>
-                                                                        <li><a href="#"><i
+                                                                        <li><a href="banking_fixed_term_deposit.html"><i
                                                                                     class="fa fa-plus-circle"></i>
                                                                                 &nbsp; Fixed Term Diposit</a> </li>
                                                                         <li><a href="#"><i
