--- a/fixed-deposit-reinvestment.html
+++ b/fixed-deposit-reinvestment.html
@@ -90,7 +90,7 @@
             margin-bottom: 3px;
         }
         .header_medium {
-            background: url(images/banners/1.png) 0px 0px no-repeat;
+            background: url(images/banners/3.png) 0px 0px no-repeat;
         }
 
         .section_holder40 {
@@ -112,197 +112,25 @@
 
 <body>
     <div class="site_wrapper">
-        <header id="header">
-            <!-- Top header bar -->
-            <div id="topHeader">
-                <div class="wrapper">
-                    <div class="top_nav two">
-                        <div class="container">
-                            <ul>
-                                <li><a target="_blank" href="https://www.facebook.com/codelayers"><i
-                                            class="fa fa-facebook"></i></a>
-                                </li>
-                                <li><a target="_blank" href="https://twitter.com/codelayers"><i
-                                            class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                <li class="last"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            </ul>
-                            <a href="#" class="registerbut">Register</a><a class="login_but" href="#">Login</a>
-                            <span>24x7 live
-                                Technical Support &nbsp;&nbsp; <i class="fa fa-phone"></i> &nbsp;(+91)8010905911</span>
-                            <!-- end right social links -->
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end top navigation -->
-
-            <div id="trueHeader">
-                <div class="wrapper">
-                    <div class="container">
-
-                        <!-- Logo -->
-                        <div class="logo"><a href="index.html" id="logo"></a></div>
-
-                        <!-- Menu -->
-                        <div class="menu_main">
-                            <div class="navbar yamm navbar-default">
-                                <div class="container">
-                                    <div class="navbar-header">
-                                        <div class="navbar-toggle .navbar-collapse .pull-right " data-toggle="collapse"
-                                            data-target="#navbar-collapse-1"> <span>Menu</span>
-                                            <button type="button"> <i class="fa fa-bars"></i></button>
-                                        </div>
-                                    </div>
-                                    <div id="navbar-collapse-1" class="navbar-collapse collapse pull-right">
-                                        <nav>
-                                            <ul class="nav navbar-nav">
-                                                <li class="dropdown yamm-fw"> <a href="message-boxes.html"
-                                                        class="dropdown-toggle">Banking</a>
-                                                    <ul class="dropdown-menu">
-                                                        <li>
-                                                            <!-- Content container to add padding -->
-                                                            <div class="yamm-content">
-                                                                <div class="row">
-                                                                    <ul class="col-sm-6 col-md-3 list-unstyled ">
-                                                                        <li>
-                                                                            <p> Savings Account </p>
-                                                                        </li>
-                                                                        <li><a href="banking_general.html"><i
-                                                                                    class="fa fa-plus-circle"></i>
-                                                                                &nbsp; General</a> </li>
-                                                                        <li><a href="banking_premium.html"><i
-                                                                                    class="fa fa-plus-circle"></i>
-                                                                                &nbsp; Premium</a> </li>
-                                                                        <li><a href="banking_kids.html"><i
-                                                                                    class="fa fa-plus-circle"></i>
-                                                                                &nbsp; Kids</a> </li>
-                                                                        <li><a href="banking_senior_citizen.html"><i
-                                                                                    class="fa fa-plus-circle"></i>
-                                                                                &nbsp; Senior Citizens</a> </li>
-                                                                    </ul>
-                                                                    <ul class="col-sm-6 col-md-3 list-unstyled ">
-                                                                        <li>
-                                                                            <p> Fixed Diposit </p>
-                                                                        </li>
-                                                                        <li><a href="banking_fixed_term_deposit.html"><i
-                                                                                    class="fa fa-plus-circle"></i>
-                                                                                &nbsp; Fixed Term Diposit</a> </li>
-                                                                        <li><a href="#"><i
-                                                                                    class="fa fa-plus-circle"></i>
-                                                                                &nbsp; Fixed Diposit Reinvestment</a>
-                                                                        </li>
-                                                                    </ul>
-                                                                    <ul class="col-sm-6 col-md-3 list-unstyled ">
-                                                                        <li>
-                                                                            <p> Cards </p>
-                                                                        </li>
-                                                                        <li><a href="#"><i
-                                                                                    class="fa fa-plus-circle"></i>
-                                                                                &nbsp; RUPAY Debit Card</a> </li>
-                                                                    </ul>
-                                                                    <ul class="col-sm-6 col-md-3 list-unstyled ">
-                                                                        <li>
-                                                                            <p> </p>
-                                                                        </li>
-                                                                        <li><a href="#"><i
-                                                                                    class="fa fa-plus-circle"></i>
-                                                                                &nbsp; Corporate Banking</a> </li>
-                                                                        <li><a href="#"><i
-                                                                                    class="fa fa-plus-circle"></i>
-                                                                                &nbsp; Investor Relations</a> </li>
-                                                                    </ul>
-                                                                </div>
-                                                            </div>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                                <!--end elements styles-->
-                                                <li class="dropdown"> <a href="index.html" class="dropdown-toggle">
-                                                        Business</a>
-                                                    <ul class="dropdown-menu" role="menu">
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; Current
-                                                                Account General</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; Current
-                                                                Account Premium</a> </li>
-                                                    </ul>
-                                                </li>
-                                                <li class="dropdown"> <a href="domain_search.html"
-                                                        class="dropdown-toggle"> Loans</a>
-                                                    <ul class="dropdown-menu" role="menu">
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp;
-                                                                Individulas/Professionals</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; Agri &
-                                                                Allied Service</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp;
-                                                                MSMEs</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; Micro
-                                                                Finance</a> </li>
-                                                    </ul>
-                                                </li>
-                                                <li class="dropdown"> <a href="webhosting.html" class="dropdown-toggle">
-                                                        Services</a>
-                                                    <ul class="dropdown-menu" role="menu">
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp;
-                                                                Door-Step Service</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; NEFT
-                                                                Service</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; RTGS
-                                                                Service</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; IMPS
-                                                                Service</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; Utility
-                                                                Bills Payment</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; ECS
-                                                                Service</a> </li>
-                                                    </ul>
-                                                </li>
-
-                                                <li class="dropdown"> <a href="webhosting.html" class="dropdown-toggle">
-                                                        More</a>
-                                                    <ul class="dropdown-menu" role="menu">
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp;
-                                                                Career</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; Get In
-                                                                Touch</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp;
-                                                                Mission</a> </li>
-                                                        <li><a href="#"><i class="fa fa-plus-circle"></i> &nbsp; About
-                                                                Us</a> </li>
-                                                    </ul>
-                                                </li>
-                                                <!--end elements styles-->
-                                            </ul>
-                                        </nav>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- end menu -->
-
-                    </div>
-                </div>
-            </div>
-        </header>
+        <header id="header"></header>
         <div class="clearfix"></div>
         <div class="header_medium two">
             <div class="container">
-                <h3 class="bigtext"> Savings Account <span>Fixed Term Deposit</span></h3>
+                <h3 class="bigtext"> Fixed Diposit <span>Fixed Deposit Reinvestment</span></h3>
             </div>
         </div>
         <!--end header medium-->
 
         <div class="section_holder19">
             <div class="container">
-                <h1 class="lt_title_medium">Savings Account <span>Fixed Term Deposit</span></h1>
+                <h1 class="lt_title_medium">Fixed Diposit <span>Fixed Deposit Reinvestment</span></h1>
                 <div class="section_title_line_full"></div>
                 <div class="clearfix"></div>
                 <div class="one_half">
                     <img src="images/rupee.png" alt="" width="100%">
                 </div>
                 <div class="one_half last">
-                    <h1>Fixed Term Deposit</h1>
+                    <h1>Fixed Deposit Reinvestment</h1>
                     <p>We provide options to each individual to choose a category of savings account depending upon
                         their personal requirements and services with 5% interest rate, to meet their banking needs.</p>
                 </div>
@@ -785,8 +613,13 @@
 
     <!-- ######### JS FILES ######### -->
 
-    <!-- get jQuery from the google apis -->
-    <script type="text/javascript" src="js/universal/jquery.js"></script>
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('#header').load('./partials/navbar.html')
+        })
+    </script>
 
     <!-- style switcher -->
     <script src="js/style-switcher/jquery-1.js"></script>
