--- a/career.html
+++ b/career.html
@@ -2,7 +2,435 @@
 <html lang="en-gb">
 
 <head>
-    <title>Banking || Premium</title>
+    <title>Career</title>
+    <meta charset="utf-8">
+    <!-- Meta -->
+    <meta name="keywords" content="" />
+    <meta name="author" content="">
+    <meta name="robots" content="" />
+    <meta name="description" content="" />
+
+    <!-- this styles only adds some repairs on idevices  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/favicon.html">
+
+    <!-- Google fonts - witch you want to use - (rest you can just remove) -->
+    <link
+        href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic'
+        rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900' rel='stylesheet'
+        type='text/css'>
+
+    <!--[if lt IE 9]>
+  <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+    <!-- ######### CSS STYLES ######### -->
+
+    <link rel="stylesheet" href="css/reset.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+
+    <!-- responsive devices styles -->
+    <link rel="stylesheet" media="screen" href="css/responsive-leyouts.css" type="text/css" />
+
+    <!-- mega menu -->
+    <link href="js/mainmenu/sticky.css" rel="stylesheet">
+    <link href="js/mainmenu/bootstrap.min.css" rel="stylesheet">
+    <link href="js/mainmenu/demo.css" rel="stylesheet">
+    <link href="js/mainmenu/menu.css" rel="stylesheet">
+
+    <!-- revolution slider -->
+    <!-- CSS STYLE-->
+    <link rel="stylesheet" type="text/css" href="js/revolutionslider/css/style.css" media="screen" />
+
+    <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
+    <link rel="stylesheet" type="text/css" href="js/revolutionslider/css/extralayers.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="js/revolutionslider/rs-plugin/css/settings.css" media="screen" />
+
+    <!-- simple line icons -->
+    <link rel="stylesheet" type="text/css" href="css/Simple-Line-Icons-Webfont/simple-line-icons.css" media="screen" />
+
+    <!-- flexslider -->
+    <link rel="stylesheet" href="js/flexslider/flexslider.css" type="text/css" media="screen" />
+
+    <!-- Accordions -->
+    <link rel="stylesheet" href="js/accordion/accordion.css" type="text/css" media="all">
+
+    <!-- forms -->
+    <link rel="stylesheet" href="js/form/sky-forms.css" type="text/css" media="all">
+
+    <!-- tabs -->
+    <link rel="stylesheet" type="text/css" href="js/tabs/assets/css/responsive-tabs.css">
+    <link rel="stylesheet" type="text/css" href="js/tabs/assets/css/responsive-tabs7.css">
+
+    <!-- tabs -->
+    <link rel="stylesheet" type="text/css" href="js/tabs/assets/css/responsive-tabs.css">
+    <link rel="stylesheet" type="text/css" href="js/tabs/assets/css/responsive-tabs2.css">
+    <link rel="stylesheet" type="text/css" href="js/tabs/assets/css/responsive-tabs10.css">
+    <link rel="stylesheet" href="css/custom_styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <style>
+        .section_holder33 .price_table {
+            height: 345px;
+        }
+
+        .section_holder33 ul.plan_features li {
+            border-bottom: none;
+        }
+
+        .height {
+            height: 285px !important;
+        }
+
+        .tabs li.active a {
+            background-color: #119ee7;
+        }
+
+        .content ul li {
+            margin-bottom: 3px;
+        }
+
+        .header_medium {
+            background: url(images/banners/2.png) 0px 0px no-repeat !important;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="site_wrapper">
+        <div id="header"></div>
+        <div class="clearfix"></div>
+        <div class="header_medium two">
+            <div class="container">
+                <h3 class="bigtext">Career<span></span></h3>
+            </div>
+        </div>
+
+        <div class="section_holder19">
+            <div class="container">
+                <div class="one_full">
+                    <div class="contbox_st1" style="text-align: center;">
+                        <h4>Looking for a job to shape your career in banking? Apply today at Subhadra Bank and grab the opportunity to work with best-in-class professionals.</h4>
+                        <h2>No Current offers and jobs available</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+
+        <div class="punchtext">
+            <div class="container">
+                <div class="text">
+                    <h4 class="white margin_top1">Want to know more?</h4>
+                </div>
+                <div class="but"> <a href="#" class="readmore_but2">Contact now</a> </div>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+        <!--end section-->
+
+
+
+
+
+
+
+
+        
+
+        <div class="section_holder19">
+            <div class="container">
+                <h1 class="lt_title_big">Userfull<span>Links</span></h1>
+                <div class="lt_title_line"></div>
+                <p class="lt_title_bottomtext">...</p>
+                <div class="one_half">
+                    <div class="accrodation">
+                        <!-- section 1 -->
+                        <span class="acc-trigger active" style="width: 562px;"><a href="#">Quick Links</a></span>
+                        <div class="acc-container" style="display: block; width: 562px;">
+                            <div class="content">
+                                <ul style="margin-bottom: 0;">
+                                    <li><i class="fa fa-cog"></i><a href="#"> Loans</a></li>
+                                    <li><i class="fa fa-cog"></i><a href="#"> Request A Service</a></li>
+                                    <li><i class="fa fa-cog"></i><a href="#"> Rupay Card</a></li>
+                                    <li><i class="fa fa-cog"></i><a href="#"> KYC Document</a></li>
+                                    <li><i class="fa fa-cog"></i><a href="#"> Security Tips</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- section 3 -->
+                        <span class="acc-trigger" style="width: 562px;"><a href="#">Rate & Charges</a></span>
+                        <div class="acc-container" style="display: none; width: 562px;">
+                            <div class="content">
+                                <ul style="margin-bottom: 0;">
+                                    <li><i class="fa fa-cog"></i><a href="#"> Interest Rates</a></li>
+                                    <li><i class="fa fa-cog"></i><a href="#"> Service Charges & Fees</a>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- section 5 -->
+                        <span class="acc-trigger" style="width: 562px;"><a href="#">Regulatory Disclosure</a></span>
+                        <div class="acc-container" style="display: none; width: 562px;">
+                            <div class="content">
+                                <ul style="margin-bottom: 0;">
+                                    <li><i class="fa fa-cog"></i><a href="#"> List of Unclaimed Deposits</a></li>
+                                    <li><i class="fa fa-cog"></i><a href="#"> Procedure for Claiming Unclaimed
+                                            Deposits</a></li>
+                                    <li><i class="fa fa-cog"></i><a href="#"> Banking Facility for Sr. Citizens &
+                                            Differently Abled Persons</a></li>
+                                    <li><i class="fa fa-cog"></i><a href="#"> List of Unclaimed Dividend</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="one_half last">
+                    <img class="img_size1" src="images/links.png" alt="">
+                </div>
+                <div class="margin_top2"></div>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+        <!-- end section -->
+
+        <div class="punchtext">
+            <div class="container">
+                <div class="text">
+                    <h4 class="white margin_top1">Your Excellent Banking Team</h4>
+                </div>
+                <div class="but"> <a href="https://1.envato.market/foxuhost-html-by-codelayers"
+                        class="readmore_but2">Get-In-Touch</a> </div>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+        <!--end section-->
+
+        <div class="section_holder7 two">
+            <div class="container">
+                <h1 class="lt_title_big">Get In <span>Touch</span></h1>
+                <div class="lt_title_line"></div>
+                <p class="lt_title_bottomtext">...</p>
+                <div class="clearfix"></div>
+
+                <div class="clearfix"></div>
+                <div class="one_full">
+                    <section class="slider">
+                        <div class="flexslider style2">
+                            <ul class="slides">
+                                <li>
+                                    <div class="clint_holder">
+                                        <div class="clint">
+                                            <div class="img_holder active">
+                                                <div class="img"></div>
+                                            </div>
+                                        </div>
+                                        <div class="text">
+                                            <h5 class="lessmar2">Help & Support</h5>
+                                            <p class="padd_top1">
+                                                Email:support@subhadrabank.com<br>
+                                                Tel : +91 8010905911 </p>
+                                        </div>
+                                    </div>
+                                    <!--end clint-->
+
+                                    <div class="clint_holder two">
+                                        <div class="clint two">
+                                            <div class="img_holder two">
+                                                <div class="img two"></div>
+                                            </div>
+                                        </div>
+                                        <div class="text two">
+                                            <h5 class="lessmar2" style="text-transform: capitalize;">For any grievances
+                                                and customer complaints</h5>
+                                            <p class="padd_top1">
+                                                <i class="fa fa-envelope"></i> Email:grievance@subhadrabank.com</a><br>
+                                                <i class="fa fa-phone"></i> Tel : Amol Shaiwale +91 8010905911</a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <!--end clint-->
+                                </li>
+                                <!--end item-->
+                            </ul>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <div class="margin_top5"></div>
+        </div>
+        <!--end section 7-->
+        <div class="clearfix"></div>
+        <!-- end section -->
+
+
+
+
+
+        <div class="footer1 two">
+            <div class="container">
+                <div class="one_fourth">
+                    <h4 class="white">About Subhadra Bank</h4>
+                    <div class="footer_title_line"></div>
+                    <ul class="quick_links">
+                        <li><a href="#">About US</a></li>
+                        <li><a href="#">Contact US</a></li>
+                        <li><a href="#">Our History</a></li>
+                        <li><a href="#">My Account</a></li>
+                    </ul>
+                    <div class="newsletter">
+                        <p class="padd_bot1 margin_top1"> Sign up for special offers</p>
+                        <form method="get" action="https://codelayers.net/foxuhost/layout2/fullwidth/index.html">
+                            <input class="email_input" name="samplees" id="samplees" value="E-mail Address"
+                                onFocus="if(this.value == 'E-mail Address') {this.value = '';}"
+                                onBlur="if (this.value == '') {this.value = 'E-mail Address';}" type="text">
+                            <input name="" value="Submit" class="email_submit two" type="submit">
+                        </form>
+                    </div>
+                </div>
+                <!--end about foxu-->
+
+                <div class="one_fourth">
+                    <h4 class="white">Latest Blog Posts</h4>
+                    <div class="footer_title_line"></div>
+
+                    <div class="post_holder first active">
+                        <div class="img_holder">
+                            <div class="img"><img src="images/site-img70.jpg" alt="" class="img_size1" /></div>
+                        </div>
+                        <div class="text">
+                            <a href="#"><span class="bold">Suspendisse imperdiet</span></a>
+                            <p>Lorem ipsum dolor sit et</p>
+                            <span class="info">By John Doe / 25 July</span>
+                        </div>
+                    </div>
+                    <!--end item-->
+
+                    <div class="post_holder">
+                        <div class="img_holder">
+                            <div class="img"><img src="images/site-img71.jpg" alt="" class="img_size1" /></div>
+                        </div>
+                        <div class="text">
+                            <a href="#"><span class="bold">Suspendisse imperdiet</span></a>
+                            <p>Lorem ipsum dolor sit et</p>
+                            <span class="info">By John Doe / 25 July</span>
+                        </div>
+                    </div>
+                    <!--end item-->
+
+                    <div class="post_holder last">
+                        <div class="img_holder">
+                            <div class="img"><img src="images/site-img72.jpg" alt="" class="img_size1" /></div>
+                        </div>
+                        <div class="text">
+                            <a href="#"><span class="bold">Suspendisse imperdiet</span></a>
+                            <p>Lorem ipsum dolor sit et</p>
+                            <span class="info">By John Doe / 25 July</span>
+                        </div>
+                    </div>
+                    <!--end item-->
+
+
+
+                </div>
+                <!--end products and services-->
+
+                <div class="one_fourth">
+                    <h4 class="white">Banking</h4>
+                    <div class="footer_title_line"></div>
+                    <ul class="quick_links">
+                        <li><a href="#">General</a></li>
+                        <li><a href="#">Premium</a></li>
+                        <li><a href="#">Kids</a></li>
+                        <li><a href="#">Senior Citizens</a></li>
+                    </ul>
+                </div>
+
+                <div class="one_fourth last">
+                    <h4 class="white">Others</h4>
+                    <div class="footer_title_line"></div>
+                    <ul class="quick_links">
+                        <li><a href="#">Career</a></li>
+                        <li><a href="#">Get In Touch</a></li>
+                        <li><a href="#">Misssion</a></li>
+
+                    </ul>
+                </div>
+                <!--end need help-->
+            </div>
+        </div>
+        <!--end footer-->
+
+        <div class="copyrights">
+            <div class="container">
+                <div class="one_half"><span>Copyright © 2021 <a style="color: #fff !important;" href="#">Subhadra</a> By
+                        <a style="color: #fff !important;" href="https://1.envato.market/codelayers">subhadra.com</a> |
+                        All rights reserved.
+                    </span></div>
+                <div class="one_half last">
+                    <ul class="social_icons">
+                        <li><a target="_blank" href="https://www.facebook.com/codelayers"><i
+                                    class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!--end copy rights-->
+
+        <a href="#" class="scrollup"></a><!-- end scroll to top of the page-->
+
+    </div>
+    <!--end sitewraper-->
+
+    <!-- ######### JS FILES ######### -->
+
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#header').load('./partials/navbar.html')
+        })
+    </script>
+
+    <!-- style switcher -->
+    <script src="js/style-switcher/jquery-1.js"></script>
+    <script src="js/style-switcher/styleselector.js"></script>
+
+    <!-- SLIDER REVOLUTION 4.x SCRIPTS  -->
+    <script type="text/javascript" src="js/revolutionslider/rs-plugin/js/jquery.themepunch.revolution.js"></script>
+    <script type="text/javascript" src="js/revolutionslider/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+    <script type="text/javascript" src="js/revolutionslider/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+    <script type="text/javascript" src="js/revolutionslider/custom1.js"></script>
+
+    <!-- mega menu -->
+    <script src="js/mainmenu/bootstrap.min.js"></script>
+    <script src="js/mainmenu/customeUI.js"></script>
+
+    <!-- sticky menu -->
+    <script type="text/javascript" src="js/mainmenu/sticky.js"></script>
+    <script type="text/javascript" src="js/mainmenu/modernizr.custom.75180.js"></script>
+
+    <!-- tabs -->
+    <script src="js/tabs/assets/js/responsive-tabs.min.js" type="text/javascript"></script>
+
+    <!-- accordion -->
+    <script type="text/javascript" src="js/accordion/custom.js"></script>
+
+    <!-- scroll up -->
+    <script src="js/scrolltotop/totop.js" type="text/javascript"></script>
+
+    <!-- Flexslider -->
+    <script defer src="js/flexslider/jquery.flexslider.js"></script>
+    <script defer src="js/flexslider/custom.js"></script>
+</body>
+
+</html></title>
     <meta charset="utf-8">
     <!-- Meta -->
     <meta name="keywords" content="" />
